--- a/index.html
+++ b/index.html
@@ -21,21 +21,90 @@
       <div class="container">
         <div class="left-contents">
          <div class="card-contents">
+         <div class="blog-image">
+           <img src="./image/ネコ.jpg">
+         </div>
+         <div class="blog-text">
+           <p class="taim">19/02/03  15:30</p>
           <h2 class="text-title">ブログタイトル</h2>
+          <h2 class="text">今日は快晴。絶好のお洗濯日和で………</h2>
+        </div>
           </div>
           <div class="card-contents">
+            <div class="blog-image">
+            <img src="./image/ネコ.jpg">
+          </div>
+          <div class="blog-text">
+            <p class="taim">19/02/04 20:09</P>
            <h2 class="text-title">ぶろぐたいとる</h2>
+           <h2 class="text">新しい入浴剤どんなかなぁ。もらいものだから………</h2>
            </div>
-           <div class="card-contents">
-            <h2 class="text-title">BlogTitle</h2>
-            </div>
          </div>
-         <div class="right-contents">
          <div class="card-contents">
-          <h2 class="text-title"> 新着記事</h2>
+               <div class="blog-image">
+             <img src="./image/ネコ.jpg">
+           </div>
          </div>
+           <div class="blog-text">
+             <p class="taim">19/02/05 18:07</p>
+            <h2 class="text-title">BlogTitle</h2>
+            <h2 class="text">早めの晩御飯！思い切って………</h2>
+          </div>
         </div>
-       </div>
       </div>
+      <div class="right-contents">
+          <h3> 新着記事</h3>
+      <div class="new-contents-area">
+          <div class="new-contents">
+          <div class="new-image">
+          <img src="./image/ネコ.jpg"  alt="80px" width="80px" height="80px">
+        </div>
+          <div class="new-text">
+          <p class="new-taim">19/01/23 0:33</p>
+          <p class="new-title">サンプルブログ</p>
+          </div>
+        </div>
+          <div class="new-contents">
+          <div class="new-image">
+          <img src="./image/ネコ.jpg"  alt="80px" width="80px" height="80px">
+        </div>
+        <div class="new-text">
+        <p class="new-taim">19/01/23 0:33</p>
+        <p class="new-title">さんぷるぶろぐ</p>
+      </div>
+    </div>
+      <div class="new-contents">
+      <div class="new-image">
+      <img src="./image/ネコ.jpg"  alt="80px" width="80px" height="80px">
+    </div>
+    <div class="new-text">
+    <p class="new-taim">19/01/23 0:33</p>
+    <p class="new-title">sampleblog</p>
+    </div>
+  </div>
+  <div class="new-contents">
+  <div class="new-image">
+  <img src="./image/ネコ.jpg"  alt="80px" width="80px" height="80px">
+</div>
+<div class="new-text">
+<p class="new-taim">19/01/23 0:33</p>
+<p class="new-title">sampleblog</p>
+</div>
+</div>
+<div class="new-contents">
+<div class="new-image">
+<img src="./image/ネコ.jpg"  alt="80px" width="80px" height="80px">
+</div>
+<div class="new-text">
+<p class="new-taim">19/01/23 0:33</p>
+<p class="new-title">sampleblog</p>
+</div>
+</div>
+  </div>
+  </div>
+</div>
+<footer>
+  <p class="copyright">(C) 2019 Sample Blog.</p>
+</footer>
   </body>
 </html>
